# AI-Manifestation-Script-Generator

./: .gitignore  .replit  __init__.py  app.py  chat_request.py  config.py  create_github_repo.py  create_test_user.py  forms.py  models.py  pyproject.toml  routes.py  test_instructions.txt  update_testuser.py
migrations/versions/: 11cc575f4743_add_audio_file_column_to_script_model.py  69cc859c97bb_add_scripts_generated_to_user_model.py
static/css/: custom.css
static/js/: community.js  main.js
templates/: base.html  community.html  generate_script.html  index.html  login.html  manifestation_session.html  my_audio_files.html  profile.html  register.html  subscribe.html  view_script.html
